# ADHIKAAR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: __init__.py  compat.py  config.py
backend/app/agent/: graph.py  nodes.py  rules_nodes.py  state.py
backend/app/api/: main.py  schemas.py
backend/app/extraction/: __main__.py  discover.py  propose.py  semantic_audit.py
backend/app/i18n/: translate.py
backend/app/ingestion/: __main__.py  chunk.py  corpus.py  fetch.py  freshness.py  index.py  models.py  pdf_corpus.py  schemes.py  transcribe.py
backend/app/llm/: cache.py  gemini.py  groq_client.py  router.py
backend/app/retrieval/: rerank.py  search.py
backend/app/rules/: doc_guides.py  engine.py  loader.py
backend/evals/: dataset.jsonl  heldout.jsonl  judge.py  measure_extraction.py  metrics.py  run_eval.py  run_language_parity.py
backend/evals/results/: extraction-20260712-1859.json  heldout-llm-20260712-1906.json  heldout-rules-20260712-1856.json  language-parity-hi-20260714-1733.json  llm-20260711-1206.json  llm-20260711-1304.json  llm-20260712-1852.json  llm-20260713-0725.json  rules-20260711-1215.json  (+6 more)
backend/tests/: test_doc_guides.py  test_extraction.py  test_feedback.py  test_freshness.py  test_i18n.py  test_ingestion.py  test_metrics.py  test_near_miss.py  test_profile_normalization.py  test_profile_only_assess.py  test_profile_policy.py  test_retrieval_rerank.py  test_router.py  test_rules.py  test_semantic_audit.py  test_verifier.py
(+306 files in other folders)
