[project]
name = "adhikaar-backend"
version = "0.1.0"
description = "Adhikaar — verifiable public-benefit reasoning engine (API, agent pipeline, rules engine, ingestion, eval)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "google-genai>=1.0",
    "groq>=0.13",
    "chromadb>=0.5",
    "fastembed>=0.4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pypdf>=5.0",
    "diskcache>=5.6",
    "tenacity>=9.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long literal strings in test fixtures are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: needs the local Chroma index and reranker model (run explicitly or in full suites)",
]
